# vanity_wg_key

./: Cargo.toml  README.md  base64.c  build.rs  curve25519-fiat32.h  curve25519-hacl64.h  curve25519.cu  curve25519.h  main.c  main.cu
src/: controller.rs  curve25519.rs  lib.rs  main.rs  score.rs
