[package]
name = "vanity_wg_key"
version = "0.1.0"
authors = ["Kevin Wylder <wylderkevin@gmail.com>"]
edition = "2018"

[lib]
name = "vanity_wg_key"
path = "src/lib.rs"

[[bin]]
name = "vanity_wg_worker"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
rand = "0.6.0"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.0"

[build-dependencies]
cc = "1.0"

